Update release workflows

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -18,11 +18,12 @@ env:
   CI_EMAIL: ontimize-web@imatia.com
   CI_USERNAME: ontimize-web
   DEVELOP_BRANCH: 8.x.x
+  LIBRARY_PATH: projects/ontimize-web-ngx-charts
 
 jobs:
   build:
     runs-on: ubuntu-20.04
-    if: github.event_name == 'workflow_dispatch' || (github.event.pull_request.merged == true && contains(join(github.event.pull_request.labels.*.name, ', '), 'release'))
+    if: github.event_name == 'workflow_dispatch' || (github.event.pull_request.merged == true && contains(github.event.pull_request.labels.*.name, 'release'))
 
     steps:
       - name: Get input parameters
@@ -52,7 +53,7 @@ jobs:
       - name: obtain package.json version
         id: project
         run: |
-          echo "version=$(node -pe "require('./package.json')['version']")" >> "$GITHUB_OUTPUT"
+          echo "version=$(node -pe "require('./package.json')['version']")" >> $GITHUB_OUTPUT
 
       - name: abort if SNAPSHOT
         if: "contains(steps.project.outputs.version, 'SNAPSHOT')"
@@ -76,7 +77,7 @@ jobs:
         with:
           tag: ${{ steps.project.outputs.version }}
           name: ${{ steps.project.outputs.version }}
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.OWEB_GH_TOKEN_PUSH }}
           body: |
             Check out the [changelog](CHANGELOG.md) for version ${{ steps.project.outputs.version }}
 
@@ -85,23 +86,32 @@ jobs:
           git config user.name "$CI_USERNAME"
           git config user.email "$CI_EMAIL"
 
+      - name: bumping version in package.json
+        run: |
+          npm version $(npm version minor --no-git-tag-version)-SNAPSHOT-0 --no-git-tag-version
+
+      - name: bumping version in internal package.json
+        working-directory: ${{ env.LIBRARY_PATH }}
+        run: |
+          npm version $(npm version minor --no-git-tag-version)-SNAPSHOT-0 --no-git-tag-version
+
       - name: Create sync branch
         run: |
           version=${{ steps.project.outputs.version }}
           git checkout -b sync/release-$version-to-develop
 
-          npm version $(npm version minor --no-git-tag-version)-SNAPSHOT-0 --no-git-tag-version
-
           git add .
-          git commit --allow-empty -m "Prepare next development iteration"
+          git commit -m "Prepare next development iteration"
           git push origin sync/release-$version-to-develop
 
       - name: Create pull request
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.OWEB_GH_TOKEN_PUSH }}
         run: |
           version=${{ steps.project.outputs.version }}
-          gh pr create -B ${{ env.DEVELOP_BRANCH }} -H sync/release-$version-to-develop --title "Sync release $version to develop" --body "Automated pull request for synchronizing released version into develop branch"
+          MESSAGE="
+          Automated pull request for synchronizing released version ($version) into develop branch
 
-
-
+          ### 💡 Merge Strategy: Create a merge commit
+          "
+          gh pr create -B ${{ env.DEVELOP_BRANCH }} -H sync/release-$version-to-develop --title "Sync release $version to develop" --body "$(echo -e "$MESSAGE")"
