--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build && scss-bundle -c scss-bundle-ontimize-charts.config.json && npm run copy-files",
-    "copy-files": "copyfiles -u 3 ./projects/ontimize-web-ngx-charts/assets/chart_animation.json ./dist/assets && echo '----¡Assets copied!----'  ",
+    "copy-files": "copyfiles -u 3 ./projects/ontimize-web-ngx-charts/assets/* ./dist/assets && echo '----¡Assets copied!----'  ",
     "test": "ng test --code-coverage",
     "test-ci": "ng test --no-watch --code-coverage --browsers ChromeHeadless",
     "lint": "ng lint",
