--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ontimize-web-ngx-charts",
-  "version": "8.2.0-SNAPSHOT-0",
+  "version": "8.2.0-SNAPSHOT-1",
   "description": "An implementation of nvD3 for Ontimize Web",
   "keywords": [
     "angular",
@@ -21,7 +21,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build && scss-bundle -c scss-bundle-ontimize-charts.config.json && npm run copy-files",
-    "copy-files": "copyfiles -u 3 './projects/ontimize-web-ngx-charts/assets/*' ./dist/assets && echo '----¡Assets copied!----'  ",
+    "copy-files": "copyfiles -u 3 ./projects/ontimize-web-ngx-charts/assets/* ./dist/assets && echo '----¡Assets copied!----'  ",
     "test": "ng test --code-coverage",
     "test-ci": "ng test --no-watch --code-coverage --browsers ChromeHeadless",
     "lint": "ng lint",
