--- a/package.json
+++ b/package.json
@@ -47,11 +47,11 @@
     "ngx-lottie": "7.0.4",
     "nvd3": "1.8.6",
     "nvd3-extra": "1.0.0",
-    "ontimize-web-ngx": "8.9.0",
-    "ontimize-web-ngx-nvd3": "8.0.0",
-    "rxjs": "~6.4.0",
-    "tslib": "~1.10.0",
-    "zone.js": "0.9.1"
+    "ontimize-web-ngx": "file:ontimize-web-ngx-8.11.0-SNAPSHOT-0.tgz",
+    "ontimize-web-ngx-nvd3": "file:ontimize-web-ngx-nvd3-8.0.0.tgz",
+    "rxjs": "~6.5.4",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.22",
@@ -74,14 +74,14 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "~1.4.0",
     "karma-sonarqube-unit-reporter": "0.0.23",
-    "ng-packagr": "^5.4.0",
+    "ng-packagr": "^9.0.0",
     "protractor": "~7.0.0",
     "sonarqube-scanner": "^2.8.1",
     "scss-bundle": "3.1.1",
-    "ts-node": "~7.0.0",
+    "ts-node": "~8.3.0",
     "tsickle": "~0.37.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.5.3",
+    "tslint": "~6.1.0",
+    "typescript": "~3.8.3",
     "xmlhttprequest-ssl": ">=1.6.2"
   }
 }
