--- a/angular.json
+++ b/angular.json
@@ -15,7 +15,12 @@
             "tsConfig": "projects/ontimize-web-ngx-charts/tsconfig.lib.json",
             "project": "projects/ontimize-web-ngx-charts/ng-package.json"
           }
-        },
+        ,          "configurations": {
+            "production": {
+              "tsConfig": "projects/ontimize-web-ngx-charts/tsconfig.lib.prod.json"
+            }
+          }
+},
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
