updated ontimize versions

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ontimize-web-ngx-quickstart-charts",
-  "version": "8.1.0",
+  "version": "9.0.0",
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
@@ -33,9 +33,9 @@
     "angular2-highlight-js": "^8.0.1",
     "hammerjs": "^2.0.8",
     "highlight.js": "^9.5.0",
-    "ontimize-web-ngx": "8.5.0",
-    "ontimize-web-ngx-theming": "8.1.0",
-    "ontimize-web-ngx-charts": "8.0.0",
+    "ontimize-web-ngx": "file:../ontimize-web-ngx/dist/ontimize-web-ngx-9.0.0-rc.0.tgz",
+    "ontimize-web-ngx-theming": "file:../ontimize-web-ngx-theming/dist/ontimize-web-ngx-theming-9.0.0.tgz",
+    "ontimize-web-ngx-charts": "file:ontimize-web-ngx-charts-9.0.0.tgz",
     "rxjs": "~6.4.0",
     "tslib": "~1.10.0",
     "zone.js": "~0.9.1"
