--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "@angular/platform-server": "~9.1.13",
     "@angular/router": "~9.1.13",
     "@angular/upgrade": "~9.1.13",
-    "angular2-highlight-js": "^8.0.1",
-    "highlight.js": "^9.5.0",
+    "highlight.js": "^11.7.0",
     "ontimize-web-ngx": "file:../ontimize-web-ngx/dist/ontimize-web-ngx-9.0.0-rc.0.tgz",
     "ontimize-web-ngx-theming": "file:../ontimize-web-ngx-theming/dist/ontimize-web-ngx-theming-9.0.0.tgz",
     "ontimize-web-ngx-charts": "file:ontimize-web-ngx-charts-9.0.0.tgz",
@@ -48,19 +47,15 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
-    "jasmine-core": "~3.4.0",
+    "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.8.3",
-    "socket.io": ">=2.4.0",
-    "ini": ">=1.3.6",
-    "webpack-subresource-integrity": ">=1.5.1"
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.0",
+    "karma-jasmine": "~3.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "protractor": "~7.0.0",
+    "ts-node": "~8.3.0",
+    "typescript": "~3.8.3"
   }
 }
