--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@swimlane/ngx-charts": "^8.1.0",
     "d3": "3.5.17",
     "dom-to-image": "^2.6.0",
     "hammerjs": "~2.0.8",
