--- a/projects/ontimize-web-ngx-charts/package.json
+++ b/projects/ontimize-web-ngx-charts/package.json
@@ -33,7 +33,8 @@
     "ontimize-web-ngx-nvd3": "8.0.0",
     "dom-to-image": "^2.6.0",
     "lottie-web": "^5.10.0",
-    "ngx-lottie": "7.0.4"
+    "ngx-lottie": "7.0.4",
+    "@swimlane/ngx-charts": "^8.1.0"
   },
   "peerDependencies": {
     "ontimize-web-ngx": "8.9.0"
