--- a/package.json
+++ b/package.json
@@ -33,21 +33,20 @@
     "@angular/common": "~9.1.13",
     "@angular/compiler": "~9.1.13",
     "@angular/core": "~9.1.13",
-    "@angular/flex-layout": "~8.0.0-beta.27",
+    "@angular/flex-layout": "^9.0.0-beta.31",
     "@angular/forms": "~9.1.13",
     "@angular/material": "~9.2.4",
     "@angular/material-moment-adapter": "~9.2.4",
     "@angular/platform-browser": "~9.1.13",
     "@angular/platform-browser-dynamic": "~9.1.13",
     "@angular/router": "~9.1.13",
-    "@swimlane/ngx-charts": "^8.1.0",
+    "@swimlane/ngx-charts": "^14.0.0",
     "d3": "3.5.17",
     "dom-to-image": "^2.6.0",
     "lottie-web": "^5.10.0",
     "ngx-lottie": "7.0.4",
     "nvd3": "1.8.6",
     "nvd3-extra": "1.0.0",
-    "ontimize-web-ngx": "8.11.0",
     "rxjs": "~6.6.7",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
