--- a/package.json
+++ b/package.json
@@ -16,39 +16,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.14",
-    "@angular/cdk": "~8.2.3",
-    "@angular/common": "~8.2.14",
-    "@angular/compiler": "~8.2.14",
-    "@angular/core": "~8.2.14",
-    "@angular/flex-layout": "~8.0.0-beta.27",
-    "@angular/forms": "~8.2.14",
+    "@angular/animations": "~9.1.13",
+    "@angular/cdk": "~9.2.4",
+    "@angular/common": "~9.1.13",
+    "@angular/compiler": "~9.1.13",
+    "@angular/core": "~9.1.13",
+    "@angular/flex-layout": "^9.0.0-beta.31",
+    "@angular/forms": "~9.1.13",
     "@angular/material": "~8.2.3",
     "@angular/material-moment-adapter": "^8.2.3",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/platform-server": "~8.2.14",
-    "@angular/router": "~8.2.14",
-    "@angular/upgrade": "~8.2.14",
+    "@angular/platform-browser": "~9.1.13",
+    "@angular/platform-browser-dynamic": "~9.1.13",
+    "@angular/platform-server": "~9.1.13",
+    "@angular/router": "~9.1.13",
+    "@angular/upgrade": "~9.1.13",
     "angular2-highlight-js": "^8.0.1",
-    "hammerjs": "^2.0.8",
     "highlight.js": "^9.5.0",
-    "ontimize-web-ngx": "8.14.0",
+    "ontimize-web-ngx": "file:ontimize-web-ngx-9.0.0.tgz",
     "ontimize-web-ngx-theming": "8.1.0",
     "ontimize-web-ngx-charts": "file:ontimize-web-ngx-charts-8.2.0.tgz",
     "rxjs": "~6.6.7",
-    "tslib": "~1.10.0",
-    "zone.js": "~0.10.3"
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.25",
-    "@angular/cli": "~8.3.25",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/language-service": "~8.2.14",
+    "@angular-devkit/build-angular": "~0.901.15",
+    "@angular/cli": "~9.1.15",
+    "@angular/compiler-cli": "~9.1.13",
+    "@angular/language-service": "~9.1.13",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -59,7 +58,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3",
+    "typescript": "~3.8.3",
     "socket.io": ">=2.4.0",
     "ini": ">=1.3.6",
     "webpack-subresource-integrity": ">=1.5.1"
