added index files and removed unused dependencies

--- a/projects/ontimize-web-ngx-charts/package.json
+++ b/projects/ontimize-web-ngx-charts/package.json
@@ -27,13 +27,10 @@
     "test-watch": "karma start --singleRun=false --autoWatch=true"
   },
   "dependencies": {
-    "d3": "3.5.17",
     "dom-to-image": "^2.6.0",
-    "lottie-web": "^5.10.0",
-    "ngx-lottie": "7.0.4",
-    "@swimlane/ngx-charts": "^8.1.0"
+    "@swimlane/ngx-charts": "^13.0.4"
   },
   "peerDependencies": {
-    "ontimize-web-ngx": "8.9.0"
+    "ontimize-web-ngx": "file:ontimize-web-ngx-9.0.0.tgz"
   }
 }
