--- a/package.json
+++ b/package.json
@@ -32,9 +32,10 @@
     "@angular/upgrade": "~9.1.13",
     "angular2-highlight-js": "^8.0.1",
     "highlight.js": "^9.5.0",
+    "nvd3": "^1.8.6",
     "ontimize-web-ngx": "file:ontimize-web-ngx-9.0.0.tgz",
-    "ontimize-web-ngx-theming": "8.1.0",
     "ontimize-web-ngx-charts": "file:ontimize-web-ngx-charts-8.2.0.tgz",
+    "ontimize-web-ngx-theming": "8.1.0",
     "rxjs": "~6.6.7",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
