--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
   "compilerOptions": {
     "downlevelIteration": true,
     "importHelpers": true,
-    "target": "es5",
-    "module": "esnext",
+    "target": "es2018",
+    "module": "es2020",
     "moduleResolution": "node",
     "outDir": "./dist",
     "baseUrl": "src",
