--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "ontimize-web-ngx-quickstart-charts",
-  "version": "11.0.0",
+  "version": "12.0.0",
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
     "ng": "ng",
     "start": "ng serve --port 4807",
     "clean": "rimraf dist",
-    "build": "ng build",
+    "build": "ng build && npm run build:themes",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -17,13 +17,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.2.17",
-    "@angular/cdk": "~11.2.13",
+    "@angular/cdk": "~12.2.13",
     "@angular/common": "~12.2.17",
     "@angular/compiler": "~12.2.17",
     "@angular/core": "~12.2.17",
     "@angular/flex-layout": "^12.0.0-beta.34",
     "@angular/forms": "~12.2.17",
-    "@angular/material": "~11.2.13",
+    "@angular/material": "~12.2.13",
     "@angular/material-moment-adapter": "~12.2.13",
     "@angular/platform-browser": "~12.2.17",
     "@angular/platform-browser-dynamic": "~12.2.17",
