--- a/angular.json
+++ b/angular.json
@@ -70,12 +70,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ontimize-web-ngx-quickstart-charts:build",
-            "sourceMap": {
-              "scripts": true,
-              "styles": false,
-              "vendor": true
-            }
+            "browserTarget": "ontimize-web-ngx-quickstart-charts:build"
           },
           "configurations": {
             "production": {
@@ -116,16 +111,6 @@
               }
             ]
           }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "src/tsconfig.app.json",
-              "src/tsconfig.spec.json"
-            ],
-            "exclude": []
-          }
         }
       }
     },
@@ -139,15 +124,6 @@
           "options": {
             "protractorConfig": "./protractor.conf.js",
             "devServerTarget": "ontimize-web-ngx-quickstart-charts:serve"
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "e2e/tsconfig.e2e.json"
-            ],
-            "exclude": []
           }
         }
       }
