--- a/package.json
+++ b/package.json
@@ -15,16 +15,19 @@
     "production-aot-server": "ng build --configuration production=true --baseHref=/ontimizeweb/v8/charts/"
   },
   "private": true,
+  "engines": {
+    "node": "^14.20.0 || ^16.13.0 || ^18.10.0"
+  },
   "dependencies": {
     "@angular/animations": "^15.2.9",
     "@angular/cdk": "^15.2.9",
     "@angular/common": "^15.2.9",
     "@angular/compiler": "^15.2.9",
     "@angular/core": "^15.2.9",
-    "@angular/flex-layout": "^14.0.0-beta.40",
+    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^15.2.9",
-    "@angular/material": "^14.2.7",
-    "@angular/material-moment-adapter": "^14.2.7",
+    "@angular/material": "^15.2.9",
+    "@angular/material-moment-adapter": "^15.2.9",
     "@angular/platform-browser": "^15.2.9",
     "@angular/platform-browser-dynamic": "^15.2.9",
     "@angular/platform-server": "^15.2.9",
@@ -33,9 +36,8 @@
     "angular2-highlight-js": "^8.0.1",
     "highlight.js": "^9.5.0",
     "nvd3": "^1.8.6",
-    "ontimize-web-ngx": "file:ontimize-web-ngx-15.0.0.tgz",
+    "ontimize-web-ngx": "file:ontimize-web-ngx-15.0.0-SNAPSHOT-0.tgz",
     "ontimize-web-ngx-charts": "file:ontimize-web-ngx-charts-15.0.0.tgz",
-    "ontimize-web-ngx-theming": "8.1.0",
     "rxjs": "~6.6.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
@@ -45,23 +47,23 @@
     "@angular/cli": "^15.2.9",
     "@angular/compiler-cli": "^15.2.9",
     "@angular/language-service": "^15.2.9",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasmine": "~4.3.0",
     "@types/node": "^12.11.1",
+    "@angular-eslint/builder": "15.2.1",
+    "@angular-eslint/eslint-plugin": "15.2.1",
+    "@angular-eslint/eslint-plugin-template": "15.2.1",
+    "@angular-eslint/schematics": "15.2.1",
+    "@angular-eslint/template-parser": "15.2.1",
+    "ajv": "^7.2.4",
     "codelyzer": "^6.0.0",
+    "eslint": "^8.28.0",
     "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.4.2",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.9.5",
-    "socket.io": ">=2.4.0",
-    "ini": ">=1.3.6",
-    "webpack-subresource-integrity": ">=1.5.1"
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
+    "ts-node": "~8.3.0",
+    "typescript": "~4.9.5"
   }
 }
