--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "@angular/platform-server": "^15.2.9",
     "@angular/router": "^15.2.9",
     "@angular/upgrade": "^15.2.9",
-    "angular2-highlight-js": "^8.0.1",
-    "highlight.js": "^9.5.0",
+    "highlight.js": "^11.7.0",
+    "ngx-highlightjs": "^4.1.0-beta",
     "nvd3": "^1.8.6",
     "ontimize-web-ngx": "file:ontimize-web-ngx-15.0.0-SNAPSHOT-0.tgz",
     "ontimize-web-ngx-charts": "file:ontimize-web-ngx-charts-15.0.0.tgz",
