--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ontimize-web-ngx-charts",
-  "version": "15.0.0",
+  "version": "15.0.0-SNAPSHOT-0",
   "description": "An implementation of nvD3 for Ontimize Web",
   "keywords": [
     "angular",
@@ -43,9 +43,9 @@
     "@swimlane/ngx-charts": "^20.4.0",
     "dom-to-image": "^2.6.0",
     "ontimize-web-ngx": "file:ontimize-web-ngx-15.0.0.tgz",
-    "rxjs": "~6.6.7",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.9",
@@ -53,9 +53,8 @@
     "@angular/cli": "^15.2.9",
     "@angular/compiler-cli": "^15.2.9",
     "@angular/language-service": "^15.2.9",
-    "@types/hammerjs": "~2.0.36",
     "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/hammerjs": "~2.0.36",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "copyfiles": "~2.2.0",
@@ -63,9 +62,9 @@
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.4.2",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "~1.5.0",
     "karma-sonarqube-unit-reporter": "0.0.23",
     "ng-packagr": "^15.2.2",
     "protractor": "~7.0.0",
