--- a/package.json
+++ b/package.json
@@ -50,29 +50,35 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.9",
     "@angular-devkit/build-optimizer": "^0.803.23",
+    "@angular-eslint/builder": "15.2.1",
+    "@angular-eslint/eslint-plugin": "15.2.1",
+    "@angular-eslint/eslint-plugin-template": "15.2.1",
+    "@angular-eslint/schematics": "15.2.1",
+    "@angular-eslint/template-parser": "15.2.1",
     "@angular/cli": "^15.2.9",
     "@angular/compiler-cli": "^15.2.9",
     "@angular/language-service": "^15.2.9",
-    "@types/jasmine": "~3.6.0",
     "@types/hammerjs": "~2.0.36",
+    "@types/jasmine": "~3.6.0",
+    "@types/moment": "^2.13.0",
     "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
     "copyfiles": "~2.2.0",
-    "jasmine-core": "~3.6.0",
+    "eslint": "^8.28.0",
+    "jasmine-core": "~4.5.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.4.2",
+    "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.5.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
     "karma-sonarqube-unit-reporter": "0.0.23",
+    "moment": "^2.29.4",
     "ng-packagr": "^15.2.2",
-    "protractor": "~7.0.0",
-    "sonarqube-scanner": "^2.8.1",
     "scss-bundle": "3.1.1",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.9.5",
-    "xmlhttprequest-ssl": ">=1.6.2"
+    "sonarqube-scanner": "^2.8.1",
+    "ts-node": "~7.0.0",
+    "typescript": "~4.9.5"
   }
 }
