Fixed primary, accent and warning getting wrong

--- a/angular.json
+++ b/angular.json
@@ -47,7 +47,12 @@
             "buildOptimizer": false,
             "sourceMap": true,
             "optimization": false,
-            "namedChunks": true
+            "namedChunks": true,
+            "allowedCommonJsDependencies": [
+              "dom-to-image",
+              "google-libphonenumber",
+              "moment"
+            ]
           },
           "configurations": {
             "production": {
