--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ontimize-web-ngx-quickstart-charts",
-  "version": "14.0.0",
+  "version": "15.0.0",
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
@@ -36,8 +36,8 @@
     "highlight.js": "^11.7.0",
     "ngx-highlightjs": "^4.1.0-beta",
     "nvd3": "^1.8.6",
-    "ontimize-web-ngx": "file:ontimize-web-ngx-15.0.0-SNAPSHOT-0.tgz",
-    "ontimize-web-ngx-charts": "file:ontimize-web-ngx-charts-15.0.0.tgz",
+    "ontimize-web-ngx": "file:ontimize-web-ngx-15.0.0-SNAPSHOT-2.tgz",
+    "ontimize-web-ngx-charts": "file:ontimize-web-ngx-charts-15.0.0-SNAPSHOT-0.tgz",
     "rxjs": "~6.6.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
