--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build && scss-bundle -c scss-bundle-ontimize-charts.config.json && npm run copy-files",
+    "build-prod": "ng build -c production && scss-bundle -c scss-bundle-ontimize-charts.config.json && npm run copy-files",
     "copy-files": "copyfiles -u 3 ./projects/ontimize-web-ngx-charts/assets/* ./dist/assets && echo '----¡Assets copied!----'  ",
     "test": "ng test --code-coverage",
     "test-ci": "ng test --no-watch --code-coverage --browsers ChromeHeadless",
@@ -42,7 +43,7 @@
     "@angular/router": "^15.2.9",
     "@swimlane/ngx-charts": "^20.4.0",
     "dom-to-image": "^2.6.0",
-    "ontimize-web-ngx": "file:ontimize-web-ngx-15.0.0-SNAPSHOT-2.tgz",
+    "ontimize-web-ngx": "file:ontimize-web-ngx-15.0.0-SNAPSHOT-3.tgz",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
