--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@angular/router": "^15.2.9",
     "@swimlane/ngx-charts": "^20.4.0",
     "dom-to-image": "^2.6.0",
-    "ontimize-web-ngx": "file:ontimize-web-ngx-15.0.0-SNAPSHOT-3.tgz",
+    "ontimize-web-ngx": "15.0.0-beta.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
