--- a/.github/workflows/build-manually.yml
+++ b/.github/workflows/build-manually.yml
@@ -24,8 +24,8 @@ jobs:
         with:
           node-version: 18.10.0
 
-      - name: npm install and npm run build
+      - name: npm install and npm run build-prod
         run: |
           npm i
-          npm run build
+          npm run build-prod
 
