Migration to Angular 15 (#133)
* modified dependencies

* adapted the pie, donut and bar charts

* added charts options

* added multi bar chart

* added color

* added multi bar and removed unused dependencies

* feat: updated workflows (#127)

* removed unused imports

* updated package

* updated to angular 9

* migrated to material 9

* updated flex-layout to 9

* updated tslib to 2.0.0

* update ontimize-web-ngx to 9

* added index files and removed unused dependencies

* updated tslib to 2.0.0

* updated to angular10

* updated swimlane and material-moment-adapter

* updated material and core

* finished migration to angular 10

* migration to angular 11

* finished migration to angular 11

* updated package-lock

* updated to angular 12

* finished migration to angular 12

* updated to angular 13

* finished migration to angular 13

* updated to angular 14

* finished migration to angular 14

* updated to angular 15

* migration to material 15

* added new parameters to charts

* Updated version, dependencies and devDependecies

* ng generate @angular/material:mdc-migration

* updated to eslint

* added inputs to show grid and data label

* [Migration] Removed deprecated @InputConverter (#131)

* Updated version and dependencies

* updated ontimize-web-ngx tgz

* Replaced InputConverter by BooleanInputConverter

* Update karma conf

* fixed chart on demand errors

* added formatting

* updated CHANGELOG and README

* feat: workflow beta version support (#134)

* updated tgz, workflows and chart-on-demand service

* removed code smells

* modified configureParams

* deleted bugs

* Updated ontimize-web-ngx  to 15.0.0-beta.0

* Updated workflows

* Update CHANGELOG.md

* Updated README.md

* Update CHANGELOG.md

* Update package.json

---------

Co-authored-by: Daniel Graña Cousido <daniel.grana@imatia.com>
Co-authored-by: IMATIASL\patricia.martinez 

--- a/angular.json
+++ b/angular.json
@@ -10,12 +10,17 @@
       "prefix": "lib",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
             "tsConfig": "projects/ontimize-web-ngx-charts/tsconfig.lib.json",
             "project": "projects/ontimize-web-ngx-charts/ng-package.json"
           }
-        },
+        ,          "configurations": {
+            "production": {
+              "tsConfig": "projects/ontimize-web-ngx-charts/tsconfig.lib.prod.json"
+            }
+          }
+},
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
@@ -23,21 +28,16 @@
             "tsConfig": "projects/ontimize-web-ngx-charts/tsconfig.spec.json",
             "karmaConfig": "projects/ontimize-web-ngx-charts/karma.conf.js"
           }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "projects/ontimize-web-ngx-charts/tsconfig.lib.json",
-              "projects/ontimize-web-ngx-charts/tsconfig.spec.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
-          }
         }
       }
     }
   },
-  "defaultProject": "ontimize-web-ngx-charts"
+  "schematics": {
+    "@angular-eslint/schematics:application": {
+      "setParserOptionsProject": true
+    },
+    "@angular-eslint/schematics:library": {
+      "setParserOptionsProject": true
+    }
+  }
 }
