--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ontimize-web-ngx-charts",
-  "version": "8.2.0",
+  "version": "15.0.0-SNAPSHOT-1",
   "description": "An implementation of nvD3 for Ontimize Web",
   "keywords": [
     "angular",
@@ -21,6 +21,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build && scss-bundle -c scss-bundle-ontimize-charts.config.json && npm run copy-files",
+    "build-prod": "ng build -c production && scss-bundle -c scss-bundle-ontimize-charts.config.json && npm run copy-files",
     "copy-files": "copyfiles -u 3 './projects/ontimize-web-ngx-charts/assets/*' ./dist/assets && echo '----¡Assets copied!----'  ",
     "test": "ng test --code-coverage",
     "test-ci": "ng test --no-watch --code-coverage --browsers ChromeHeadless",
@@ -28,60 +29,57 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular/animations": "~8.2.14",
-    "@angular/cdk": "~8.2.3",
-    "@angular/common": "~8.2.14",
-    "@angular/compiler": "~8.2.14",
-    "@angular/core": "~8.2.14",
-    "@angular/flex-layout": "~8.0.0-beta.27",
-    "@angular/forms": "~8.2.14",
-    "@angular/material": "~8.2.3",
-    "@angular/material-moment-adapter": "~8.2.3",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
-    "d3": "3.5.17",
+    "@angular/animations": "^15.2.9",
+    "@angular/cdk": "^15.2.9",
+    "@angular/common": "^15.2.9",
+    "@angular/compiler": "^15.2.9",
+    "@angular/core": "^15.2.9",
+    "@angular/flex-layout": "^15.0.0-beta.42",
+    "@angular/forms": "^15.2.9",
+    "@angular/material": "^15.2.9",
+    "@angular/material-moment-adapter": "^15.2.9",
+    "@angular/platform-browser": "^15.2.9",
+    "@angular/platform-browser-dynamic": "^15.2.9",
+    "@angular/router": "^15.2.9",
+    "@swimlane/ngx-charts": "^20.4.0",
     "dom-to-image": "^2.6.0",
-    "hammerjs": "~2.0.8",
-    "lottie-web": "^5.10.0",
-    "ngx-lottie": "7.0.4",
-    "nvd3": "1.8.6",
-    "nvd3-extra": "1.0.0",
-    "ontimize-web-ngx": "8.9.0",
-    "ontimize-web-ngx-nvd3": "8.0.0",
-    "rxjs": "~6.4.0",
-    "tslib": "~1.10.0",
-    "zone.js": "0.9.1"
+    "ontimize-web-ngx": "15.0.0-beta.0",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.22",
-    "@angular-devkit/build-ng-packagr": "~0.803.22",
-    "@angular-devkit/build-optimizer": "~0.803.23",
-    "@angular/cli": "~8.3.29",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/language-service": "~8.2.14",
+    "@angular-devkit/build-angular": "^15.2.9",
+    "@angular-devkit/build-optimizer": "^0.803.23",
+    "@angular-eslint/builder": "15.2.1",
+    "@angular-eslint/eslint-plugin": "15.2.1",
+    "@angular-eslint/eslint-plugin-template": "15.2.1",
+    "@angular-eslint/schematics": "15.2.1",
+    "@angular-eslint/template-parser": "15.2.1",
+    "@angular/cli": "^15.2.9",
+    "@angular/compiler-cli": "^15.2.9",
+    "@angular/language-service": "^15.2.9",
     "@types/hammerjs": "~2.0.36",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "5.2.1",
+    "@types/jasmine": "~3.6.0",
+    "@types/moment": "^2.13.0",
+    "@types/node": "^12.11.1",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
     "copyfiles": "~2.2.0",
-    "jasmine-core": "3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "~1.4.0",
+    "eslint": "^8.28.0",
+    "jasmine-core": "~4.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
     "karma-sonarqube-unit-reporter": "0.0.23",
-    "ng-packagr": "^5.4.0",
-    "protractor": "~7.0.0",
-    "sonarqube-scanner": "^2.8.1",
+    "moment": "^2.29.4",
+    "ng-packagr": "^15.2.2",
     "scss-bundle": "3.1.1",
+    "sonarqube-scanner": "^2.8.1",
     "ts-node": "~7.0.0",
-    "tsickle": "~0.37.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.5.3",
-    "xmlhttprequest-ssl": ">=1.6.2"
+    "typescript": "~4.9.5"
   }
 }
