--- a/projects/ontimize-web-ngx-charts/package.json
+++ b/projects/ontimize-web-ngx-charts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ontimize-web-ngx-charts",
-  "version": "8.2.0",
+  "version": "15.0.0-SNAPSHOT-0",
   "description": "An implementation of nvD3 for Ontimize Web",
   "keywords": [
     "angular",
@@ -27,15 +27,12 @@
     "test-watch": "karma start --singleRun=false --autoWatch=true"
   },
   "dependencies": {
-    "d3": "3.5.17",
-    "nvd3": "1.8.6",
-    "nvd3-extra": "1.0.0",
-    "ontimize-web-ngx-nvd3": "8.0.0",
     "dom-to-image": "^2.6.0",
-    "lottie-web": "^5.10.0",
-    "ngx-lottie": "7.0.4"
+    "@swimlane/ngx-charts": "^20.4.1",
+    "tslib": "^2.3.0",
+    "nvd3": "^1.8.6"
   },
   "peerDependencies": {
-    "ontimize-web-ngx": "8.9.0"
+    "ontimize-web-ngx": "15.0.0-beta.0"
   }
 }
