--- a/projects/ontimize-web-ngx-charts/package.json
+++ b/projects/ontimize-web-ngx-charts/package.json
@@ -28,8 +28,7 @@
   "dependencies": {
     "dom-to-image": "^2.6.0",
     "@swimlane/ngx-charts": "^20.4.1",
-    "tslib": "^2.3.0",
-    "nvd3": "^1.8.6"
+    "tslib": "^2.3.0"
   },
   "peerDependencies": {
     "ontimize-web-ngx": "^15.0.0-beta.0"
