--- a/projects/ontimize-web-ngx-charts/package.json
+++ b/projects/ontimize-web-ngx-charts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ontimize-web-ngx-charts",
-  "version": "15.0.0-beta.1",
+  "version": "15.0.0-SNAPSHOT-0",
   "description": "An implementation of ngx-charts for Ontimize Web",
   "keywords": [
     "angular",
