--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "private": true,
   "engines": {
-    "node": "18.10.0"
+    "node": "^18.10.0"
   },
   "dependencies": {
     "@angular/animations": "^15.2.9",
@@ -35,10 +35,10 @@
     "@angular/router": "^15.2.9",
     "@angular/upgrade": "^15.2.9",
     "highlight.js": "^11.7.0",
-    "ngx-highlightjs": "^4.1.0-beta",
-    "nvd3": "^1.8.6",
-    "ontimize-web-ngx": "15.0.0-beta.1",
-    "ontimize-web-ngx-charts": "15.0.0-beta.0",
+    "moment": "^2.18.1",
+    "ngx-highlightjs": "^8.0.0",
+    "ontimize-web-ngx": "15.0.0-beta.4",
+    "ontimize-web-ngx-charts": "15.0.0-beta.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -48,23 +48,26 @@
     "@angular/cli": "^15.2.9",
     "@angular/compiler-cli": "^15.2.9",
     "@angular/language-service": "^15.2.9",
-    "@types/jasmine": "~4.3.0",
+    "@types/jasmine": "~3.6.0",
+    "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "@angular-eslint/builder": "15.2.1",
     "@angular-eslint/eslint-plugin": "15.2.1",
     "@angular-eslint/eslint-plugin-template": "15.2.1",
     "@angular-eslint/schematics": "15.2.1",
     "@angular-eslint/template-parser": "15.2.1",
-    "ajv": "^7.2.4",
-    "codelyzer": "^6.0.0",
-    "eslint": "^8.28.0",
-    "jasmine-core": "~4.5.0",
-    "karma": "~6.4.0",
+    "jasmine-core": "~3.8.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~6.4.2",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
-    "ts-node": "~8.3.0",
+    "karma-coverage": "~2.0.3",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "~1.5.0",
+    "karma-sonarqube-unit-reporter": "0.0.23",
+    "protractor": "~7.0.0",
+    "sonarqube-scanner": "^2.8.1",
+    "ts-node": "~7.0.0",
+    "tslint": "~6.1.0",
     "typescript": "~4.9.5"
   }
 }
