--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -3,7 +3,7 @@ name: Create and publish Docker image
 
 on:
   push:
-    branches: ['quickstart-15.x.x-develop']
+    branches: ['quickstart-15.x.x-develop', 'feature/conf-redirection']
     tags:
       - q15.*
 
