--- a/charts/ontimize-web-ngx-charts/values.yaml
+++ b/charts/ontimize-web-ngx-charts/values.yaml
@@ -6,7 +6,7 @@ image:
   pullPolicy: IfNotPresent
   ## provided as basic setup. replace as needed
   repository: ghcr.io/ontimizeweb/ontimize-web-ngx-charts
-  version: feature-conf-redirection
+  version: quickstart-15.x.x-develop
 imagePullSecrets:
   - name: github-ecr-cred
 nameOverride: ""
