feat: update workflows for being able to use SNAPSHOTs of core

--- a/.github/workflows/deploy-snapshot-nexus.yml
+++ b/.github/workflows/deploy-snapshot-nexus.yml
@@ -2,9 +2,18 @@ name: Deploy snapshot Nexus
 
 on:
   workflow_dispatch:
+    inputs:
+      snapshot_mode:
+        description: "Using SNAPSHOT dependencies from private Nexus repository"
+        type: choice
+        required: true
+        default: 'false'
+        options:
+          - true
+          - false
 
 env:
-  NEXUS_REGISTRY: https://nexus.imatia.com/repository/npm/
+  NEXUS_REGISTRY: https://nexus.imatia.com/repository/npm-group/
 
 jobs:
   build:
@@ -28,10 +37,19 @@ jobs:
         with:
           node-version: 18.10.0
 
+      - name: Setup Node registry
+        if: github.event_name == 'workflow_dispatch' && github.event.inputs.snapshot_mode == 'true'
+        env:
+          NPM_AUTH_TOKEN: ${{ secrets.NPM_NEXUS_AUTH_TOKEN }}
+        run: |
+          npm set registry=${{ env.NEXUS_REGISTRY }}
+          npm set _auth=$NPM_AUTH_TOKEN
+
       - name: obtain package.json version
         id: project
         run: |
           echo "version=$(node -pe "require('./package.json')['version']")" >> "$GITHUB_OUTPUT"
+
       - name: abort if not SNAPSHOT
         if: "!contains(steps.project.outputs.version, 'SNAPSHOT')"
         run: |
