JSON API adapter (#258)
* Adapted to JSONAPI

* Renamed method name

* Improved code

* Updated ontimize-web-ngx version

* Resolved unnecessary '.apply()'.

* Renamed  preferencepreferences by preferenceparameters

* Fixed bug

* Format code

* Updated  ontimize-web-ngx version to  15.1.0-JSONAPI-SNAPSHOT-7

--- a/projects/ontimize-web-ngx-charts/package.json
+++ b/projects/ontimize-web-ngx-charts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ontimize-web-ngx-charts",
-  "version": "15.2.0-SNAPSHOT-0",
+  "version": "15.2.0-JSONAPI-SNAPSHOT-0",
   "description": "An implementation of ngx-charts for Ontimize Web",
   "keywords": [
     "angular",
@@ -31,6 +31,6 @@
     "tslib": "^2.3.0"
   },
   "peerDependencies": {
-    "ontimize-web-ngx": "^15.0.0"
+    "ontimize-web-ngx": "15.1.0-JSONAPI-SNAPSHOT-7"
   }
 }
